--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-REACT_APP_OK_APP_ID=your_app_id
-REACT_APP_OK_SECRET_KEY=your_secret_key
-REACT_APP_OK_REDIRECT_URI=https://your-app.com/callback
+VITE_APP_ID=
+VITE_SECRET_KEY=
+VITE_PUBLIC_KEY=
+VITE_REDIRECT_URI=
+VITE_API_URL=https://api.donation.ru
