--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@vkontakte/vk-bridge": "^2.15.4",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "color-parse": "^2.0.2",
