--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "vk-miniapps-deploy",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -14,7 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@vkontakte/vk-bridge": "^2.15.4",
-    "@vkontakte/vk-mini-apps-router": "^1.7.4",
+    "@vkontakte/vk-miniapps-deploy": "^0.1.9",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "color-parse": "^2.0.2",
